--- a/.gitmodules
+++ b/.gitmodules
@@ -1,13 +1,13 @@
 [submodule "LightMessaging"]
 	path = LightMessaging
-	url = https://github.com/rpetrich/LightMessaging.git
+	url = git://github.com/rpetrich/LightMessaging.git
 [submodule "rocketbootstrap"]
 	path = rocketbootstrap
-	url = https://github.com/rpetrich/rocketbootstrap.git
+	url = git://github.com/rpetrich/rocketbootstrap.git
 	branch = ios9
 [submodule "CaptainHook"]
 	path = CaptainHook
-	url = https://github.com/rpetrich/CaptainHook.git
+	url = git://github.com/rpetrich/CaptainHook.git
 [submodule "libactivator"]
 	path = libactivator
-	url = https://github.com/rpetrich/libactivator.git
+	url = git://github.com/rpetrich/libactivator.git
